# nyc-taxi-etl-airflow-

./: .gitignore  README.md
dags/: etl_dag.py
etl/: storage.py
nyc-taxi-etl/: README.md  requirements.txt
nyc-taxi-etl/dags/: etl_dag.py
nyc-taxi-etl/etl/: alerts.py  extract.py  load.py  transform.py
patient-consent-ledger/: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
patient-consent-ledger/apps/api/: main.py  requirements.txt
patient-consent-ledger/apps/consumer/: main.py  requirements.txt
patient-consent-ledger/apps/dash/: Dockerfile  app.py  requirements.txt
patient-consent-ledger/docs/adr/: 001-architecture.md  002-path-b-rationale.md
patient-consent-ledger/infra/scripts/: seed_bq.py
