[project]
name = "patient-consent-ledger"
version = "0.1.0"
description = "Near-real-time multi-channel patient consent reconciliation across three retailers."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["airflow/logs", "dbt/target", "dbt_packages"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes / pycodestyle
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "C4",            # comprehensions
    "RUF",           # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function calls in default args (FastAPI Depends pattern)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests", "apps"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
